--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,6 +123,6 @@ jobs:
       - name: Push to DockerHub
         uses: docker/build-push-action@v4
         with:
-          context: ./gateway/
+          context: ./nginx/
           push: true
           tags: vasiliykovalev17/kittygram_gateway:latest
