--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,18 @@
 server {
-  listen 80;
+  listen 9000;
   index index.html;
 
-  location {
+  location /api/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/api/;
+  }
+  location /admin/ {
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8000/admin/;
+  }
+
+  location / {
+    alias /staticfiles/;
+    try_files $uri $uri/ /index.html;
   }
 }
