--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,6 +12,9 @@ server {
     proxy_pass http://backend:9000/admin/;
     client_max_body_size 20M;
   }
+  location /media/ {
+    alias /var/www/kittygram/media/;
+  }
   location / {
     alias /staticfiles/;
     try_files $uri $uri/ /index.html;
