--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,7 @@ server {
     client_max_body_size 20M;
   }
   location /media/ {
-    alias /media/;
+    alias /var/www/kittygram/media/;
   }
   location / {
     alias /staticfiles/;
