--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-POSTGRES_DB=kittygram
 POSTGRES_USER=kittygram_user
 POSTGRES_PASSWORD=kittygram_password
-DB_NAME=kittygram
+POSTGRES_DB=kittygram
+DB_HOST=kittygram
+DB_PORT=5432
