--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,6 @@ POSTGRES_PASSWORD=kittygram_password
 POSTGRES_DB=kittygram
 DB_HOST=kittygram
 DB_PORT=5432
-SECRET_KEY=
+SECRET_KEY='secret_key7777'
+ALLOWED_HOSTS=1.1.1.1, 7.7.7.7, example.com
+DEBUG=False
