--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,7 @@
 server {
   listen 80;
   index index.html;
+  server_tokens off;
 
   location /api/ {
     proxy_set_header Host $http_host;
@@ -13,7 +14,7 @@ server {
     client_max_body_size 20M;
   }
   location /media/ {
-    alias /app/media/;
+    alias /media/;
   }
   location / {
     alias /staticfiles/;
